--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
     ></script>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <span class="d-none d-sm-block"> O.H.</span>
+        <ul class="mt-2">
+          <li class="active"><a href="/">Home</a></li>
+          <li><a href="/about.html"> About</a></li>
+          <li><a href="/work.html"> Work</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="hero">
       <p>👋 Hello, I am</p>
       <h1>Oleksandra Holovei</h1>
