--- a/about.html
+++ b/about.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="About Oleksandra. Oleksandra is a front-end engineer based in WA"
+    />
+    <title>About Oleksandra - Oleksandra Holovei</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
@@ -33,6 +37,19 @@
     ></script>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <span class="d-none d-sm-block"> O.H.</span>
+        <ul class="mt-2">
+          <li><a href="/" title="Homepage">Home</a></li>
+          <li class="active">
+            <a href="/about.html" title="About page"> About</a>
+          </li>
+          <li><a href="/work.html" title="See my work"> Work</a></li>
+          <li><a href="/contact.html" title="Contact me">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="row">
         <div class="col-lg-6">
@@ -45,7 +62,7 @@
               everything is well explained, homework and deadlines are good for
               keep focus
             </p>
-            <a href="" class="btn btn-branding">View my projects</a>
+            <a href="/work.html" class="btn btn-branding">View my projects</a>
           </div>
         </div>
         <div class="col-lg-6">
@@ -53,9 +70,64 @@
             src="images/portrait.jpeg"
             width="500"
             class="img-fluid rounded"
+            alt="Oleksandra Holovei"
           />
         </div>
       </div>
+      <footer>
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a
+              href="/contact.html"
+              class="btn btn-branding mt-3"
+              title="Contact me"
+              >Contact me</a
+            >
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a
+            href="mailto:sazevalmiel@gmail.com"
+            class="email-link"
+            title="Email Oleksandra"
+            >sazevalmiel@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center mb-5">
+          <a
+            href="https://github.com/Zevanzeval"
+            target="_blank"
+            title="GitHub Profile"
+          >
+            <i class="fa-brands fa-github"></i></a
+          ><a
+            href="https://www.instagram.com/frederickrobinsonz/"
+            target="_blank"
+            title="Instagram Page"
+            ><i class="fa-brands fa-instagram"></i></a
+          ><a
+            href="https://www.linkedin.com/in/oleksandra-holovei-7a8640233/"
+            target="_blank"
+            title="LinkedIn Profile"
+          >
+            <i class="fa-brands fa-linkedin"></i
+          ></a>
+        </div>
+        <p class="text-center text-muted">
+          This project was coded by Oleksandra, and it is
+          <a
+            href="https://github.com/Zevanzeval/Portfolio-project-2-"
+            target="_blank"
+            title="GitHub Page"
+          >
+            open-soursed</a
+          >
+        </p>
+      </footer>
     </div>
   </body>
 </html>
