--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Oleksandra is a front-end engineer based in WA"
+    />
+    <title>Front-end developer - Oleksandra Holovei</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
@@ -37,10 +41,10 @@
       <nav class="d-flex justify-content-between">
         <span class="d-none d-sm-block"> O.H.</span>
         <ul class="mt-2">
-          <li class="active"><a href="/">Home</a></li>
-          <li><a href="/about.html"> About</a></li>
-          <li><a href="/work.html"> Work</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li class="active"><a href="/" title="Homepage">Home</a></li>
+          <li><a href="/about.html" title="About page"> About</a></li>
+          <li><a href="/work.html" title="See my work"> Work</a></li>
+          <li><a href="/contact.html" title="Contact me">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -49,7 +53,11 @@
       <p>👋 Hello, I am</p>
       <h1>Oleksandra Holovei</h1>
       <h2 class="mb-5">Front-end developer based in Australia</h2>
-      <div><a href="#" class="btn btn-branding">Contact me</a></div>
+      <div>
+        <a href="/contact.html" class="btn btn-branding" title="Contact"
+          >Contact me</a
+        >
+      </div>
     </div>
     <p class="text-center m-5">
       Featured Project which my best projects be choice to show
@@ -58,7 +66,11 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/yogurt.png" class="img-fluid" alt="" />
+          <img
+            src="images/yogurt.png"
+            class="img-fluid"
+            alt="Yogurt project preview"
+          />
         </div>
         <div class="col">
           <div class="project-description">
@@ -69,7 +81,9 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline">View detail project</a>
+            <a href="/work.html" class="btn btn-branding-outline"
+              >View detail project</a
+            >
           </div>
         </div>
       </div>
@@ -83,11 +97,17 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline">View detail project</a>
+            <a href="/work.html" class="btn btn-branding-outline"
+              >View detail project</a
+            >
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/weather.png" class="img-fluid" alt="" />
+          <img
+            src="images/weather.png"
+            class="img-fluid"
+            alt="Weather app preview"
+          />
         </div>
       </div>
       <div class="row mb-5">
@@ -103,7 +123,9 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline">View detail project</a>
+            <a href="/work.html" class="btn btn-branding-outline"
+              >View detail project</a
+            >
           </div>
         </div>
       </div>
@@ -114,28 +136,52 @@
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="" class="btn btn-branding mt-3">Contact me</a>
+            <a
+              href="/contact.html"
+              class="btn btn-branding mt-3"
+              title="Contact me"
+              >Contact me</a
+            >
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:sazevalmiel@gmail.com" class="email-link"
+          <a
+            href="mailto:sazevalmiel@gmail.com"
+            class="email-link"
+            title="Email Oleksandra"
             >sazevalmiel@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center mb-5">
-          <a href="https://github.com/Zevanzeval" target="_blank">
+          <a
+            href="https://github.com/Zevanzeval"
+            target="_blank"
+            title="GitHub Profile"
+          >
             <i class="fa-brands fa-github"></i></a
           ><a
             href="https://www.instagram.com/frederickrobinsonz/"
             target="_blank"
+            title="Instagram Page"
             ><i class="fa-brands fa-instagram"></i></a
           ><a
             href="https://www.linkedin.com/in/oleksandra-holovei-7a8640233/"
             target="_blank"
+            title="LinkedIn Profile"
           >
             <i class="fa-brands fa-linkedin"></i
           ></a>
         </div>
+        <p class="text-center text-muted">
+          This project was coded by Oleksandra, and it is
+          <a
+            href="https://github.com/Zevanzeval/Portfolio-project-2-"
+            target="_blank"
+            title="GitHub Page"
+          >
+            open-soursed</a
+          >
+        </p>
       </footer>
     </div>
   </body>
